--- a/css/about-us.css
+++ b/css/about-us.css
@@ -27,12 +27,13 @@
     }
 
     .firstimg {
-        margin-left: 0px;
-        width: 500px;
+        margin-left: 40px;
+        width: 300px;
+        margin-bottom: 5px;
     }
 
     .secondimg {
-        margin-left: 0px;
-        width: 500px;
+        margin-left: 40px;
+        width: 300px;
     }
 }
